# whatsrust

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/plans/: 2026-03-06-bridge-hardening-design.md  2026-03-06-bridge-hardening.md  2026-03-06-four-workstreams-design.md  2026-03-07-messaging-features-design.md  2026-03-08-cli-api-design.md
docs/superpowers/plans/: 2026-03-30-status-sending.md
docs/superpowers/specs/: 2026-03-30-status-sending-design.md
src/: api.rs  bridge.rs  bridge_events.rs  dedup.rs  instance_lock.rs  lib.rs  main.rs  mcp.rs  media_utils.rs  outbound.rs  polls.rs  qr.rs  read_receipts.rs  storage.rs
