[package]
name = "whatsrust"
version = "0.3.0"
edition = "2021"
description = "Pure Rust WhatsApp bridge — lean, single-binary, no Baileys"
license = "MIT"
repository = "https://github.com/199-biotechnologies/whatsrust"

[lib]
name = "whatsrust"
path = "src/lib.rs"

[[bin]]
name = "whatsrust"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
async-trait = "0.1"
chrono = "0.4"
dashmap = "6"
hkdf = "0.12"
fs2 = "0.4"
parking_lot = "0.12"
png = "0.17"
prost = "0.14"
qrcode = "0.14"
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled", "backup"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "io-util", "io-std", "fs"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# whatsapp-rust — 199-biotechnologies fork, rev-pinned
# We skip the default sqlite-storage feature to avoid Diesel/libsqlite3-sys conflicts.
# Our own rusqlite backend (src/storage.rs) replaces it.
# For local dev, .cargo/config.toml patches these to ../whatsapp-rust path deps.
whatsapp-rust = { git = "https://github.com/199-biotechnologies/whatsapp-rust", rev = "9fb13a7bb1f91c3e32eccc517db2566068f15f33", default-features = false, features = ["tokio-runtime", "tokio-transport", "ureq-client", "moka-cache", "simd", "signal", "tokio-native"] }
wacore = { git = "https://github.com/199-biotechnologies/whatsapp-rust", rev = "9fb13a7bb1f91c3e32eccc517db2566068f15f33" }
wacore-binary = { git = "https://github.com/199-biotechnologies/whatsapp-rust", rev = "9fb13a7bb1f91c3e32eccc517db2566068f15f33" }
waproto = { git = "https://github.com/199-biotechnologies/whatsapp-rust", rev = "9fb13a7bb1f91c3e32eccc517db2566068f15f33" }
whatsapp-rust-tokio-transport = { git = "https://github.com/199-biotechnologies/whatsapp-rust", rev = "9fb13a7bb1f91c3e32eccc517db2566068f15f33" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/199-biotechnologies/whatsapp-rust", rev = "9fb13a7bb1f91c3e32eccc517db2566068f15f33" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
